
Added config engine.

Added initial attempt at preserving successful build logs.
----------------------------------------------------------------------
Sun Apr  4 22:28:21 2004                        Michael Jennings (mej)

Refactored config engine.

Made error messages shorter and less redundant.

Merged RPM and SRPM info into new cache.  No more unnecessary rpm
queries on startup.
----------------------------------------------------------------------
Wed Apr  7 14:23:39 2004                        Michael Jennings (mej)

Converted buildtool to use new init/option style.

Added skeleton for new source code management (SCM) mechanism.
----------------------------------------------------------------------
Thu Apr  8 17:40:49 2004                        Michael Jennings (mej)

Correct hint filename for new package name scheme.
----------------------------------------------------------------------
Sun Apr 11 20:05:16 2004                        Michael Jennings (mej)

Allow orc-style cleaning to preserve SPECS directories.

Exit code now corresponds with how many packages were actually built
during this run.  If none were built, the number of failures is
returned as a negative number.

Added 2 new options, one of which should already work, for determining
whether or not to retry broken builds or rebuild old successful
builds.
----------------------------------------------------------------------
Wed Apr 14 20:19:18 2004                        Michael Jennings (mej)

Include spec file in post-build tree.
----------------------------------------------------------------------
Mon Apr 19 22:56:06 2004                        Michael Jennings (mej)

Moved config hash to object hash to allow multiple simultaneous config
objects to exist independently.

Removed unused member functions based on key names.  Too hairy.

Enabled configuration file for buildtool.
----------------------------------------------------------------------